# Number_Recognition

./: pyproject.toml
src/: PCA.ipynb  test.py
